src/test/deca/context/invalid/Class_wrong7.deca
//Ici c'est la classe qui appelle la méthode

// Date: 20.01.2022

class A{

    int entier;

    void A (int e){
        this.entier = e;
    }

    void action (){
        this.e = this.e+1;
    }
}


{
A a = new A(15);
A.action();
println("ben non");
}